Fix PolySearchStrategy params Add notebook for pipeline executed on videos

--- a/src/lane_finding.ipynb
+++ b/src/lane_finding.ipynb
@@ -492,7 +492,7 @@
    "source": [
     "plt.figure(figsize=(14, 6))\n",
     "\n",
-    "lane_det = ld.LaneDetector(n_windows=12, margin=80, min_pix=60, poly_margin=50) \n",
+    "lane_det = ld.LaneDetector(n_windows=12, margin=80, min_pix=60) \n",
     "lane_det.run_on_image(trans_image)\n",
     "\n",
     "visualization = lane_det.get_visualization()\n",
